# CS-2200

HW/: hw1.asm
HW/cs2200-hw2/: .answers.txt.kate-swp  answers.txt
HW/cs2200-hw2/assembly/: hanoi.s  mod.s
HW/cs2200-hw4/: CMakeLists.txt  Makefile  Word_Generator
HW/cs2200-hw4/src/: arraylist.c  arraylist_tests.c  main.c  main.h
cs2200-project1/TestCases/: .SWTest.s.kate-swp  AdderTest.s  BLTTest.s  BranchTest.s  LoadingTest.s  NANDTest.s  PopTest.hex  PopTest.s  PushTest.hex  PushTest.s  SWTest.hex  SWTest.s  StoringTest.s
cs2200-project1/src/: LC-5500.sim  microcode.xlsx
cs2200-project2/assembly/: prj2.hex
cs2200-project2/src/: LC-5500a.sim  microcode.xlsx  prj2.hex  prj2.s
cs2200-project3/: vm-sim
cs2200-project3/student-src/: def.txt  mmu.c  page_fault.c  page_replacement.c  proc.c  stats.c  va_splitting.h
cs2200_extracredit/__MACOSX/: ._cs2200_extracredit
cs2200_extracredit/__MACOSX/cs2200_extracredit/: ._assembly  ._microcode.xlsx
cs2200_extracredit/__MACOSX/cs2200_extracredit/assembly/: ._pow.s  ._student-README.md
cs2200_extracredit/cs2200_extracredit/: LC-2200-pipe.sim
cs2200_project4/: metadata.yml  student.c
cs2200_project5/: metadata.yml
docker/: attach.bat
docker/workspace/: a.out  main.c
docker/workspace/cs2200-project3/: CS  Course  cs2200-project3  vm-sim
docker/workspace/cs2200-project3/simulator-src/: pagesim.c
docker/workspace/cs2200-project3/student-src/: mmu.c  page_fault.c  page_replacement.c  proc.c  stats.c  va_splitting.h
docker/workspace/cs2200-project4/: os-sim
(+5 files in other folders)
